feat: Integrate CommentServer with GetCommentUseCase
- Refactor GetCommentUseCase to consume comments from CommentServer.
- Update MilkyWayApp to properly initialize and pass dependencies.
- Adjust Ktor ContentNegotiation for robust JSON parsing.
- Remove temporary debug print statements.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-ktor = "3.2.1"
+ktor = "2.3.12"
+kotlinx-serialization = "1.6.3"
 
 [libraries]
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
